# SIPE

./: .gitignore  QnD_test.py  README.md  classes.json  dataexplo.py  eval.py  exp.py  note.txt  pretrain_50k.py  pyproject.toml  requirements.txt  sandbox.py  test.py  train_1M.py  train_Adversarial.py  train_Adversarial_v2.py  visualization.py
eval/: clustering.py  deconvolution.py  virt_stain.py
sipe/deprecated/: train_IngoNCE.py
sipe/eval/: clustering.py  topk_retrieval.py  virt_stain.py
sipe/inferer/: inferer.py
sipe/losses/: image_recon_loss.py  loss_fusion.py  morphologic_recon_loss.py  staining_cluster_loss.py
sipe/model/: arch.py  builder.py
sipe/trainer/: curriculum_trainer.py  trainer.py
sipe/utils/: contrastive_transforms.py  misc.py  stain_comp.py  test.py  transfroms.py
src/deprecated/: train_IngoNCE.py
src/inferer/: inferer.py
src/losses/: adversarial_classif_loss.py  image_recon_loss.py  loss_fusion.py  morphologic_recon_loss.py
src/losses_exps/: loss_fusion.py  meta_cluster_loss.py  morphologic_recon_loss.py
src/model/: arch.py  archV2.py  arch_cls.py  arch_nce.py  classifier.py  decoder.py  encoder.py  projector.py  vae.py
src/model_exps/: arch.py
src/trainer/: curriculum_trainer.py  trainer.py
src/utils/: contrastive_ds.py  misc.py  stain_comp.py  test.py  transfroms.py  visu.py
train_cls/: pretrain_50k.py
train_patch/: pretrain_50k.py  train_1M.py
train_vae/: pretrain_50k.py
